--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,12 +13,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.1, 8.2, 8.3]
-        laravel: [10.*, 11.*]
+        php: [8.2, 8.3]
+        laravel: [11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 10.*
-            testbench: 8.*
           - laravel: 11.*
             testbench: 9.*
 
@@ -42,3 +40,10 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/pest --coverage --min=80
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        if: matrix.php == '8.2' && matrix.laravel == '11.*' && matrix.stability == 'prefer-stable'
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
