--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,11 +39,4 @@ jobs:
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
-        run: vendor/bin/pest --coverage --min=80
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        if: matrix.php == '8.2' && matrix.laravel == '11.*' && matrix.stability == 'prefer-stable'
-        with:
-          file: ./coverage.xml
-          fail_ci_if_error: false
+        run: vendor/bin/pest
