--- a/composer.json
+++ b/composer.json
@@ -35,14 +35,14 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.2|^8.3",
-        "illuminate/support": "^11.0",
-        "illuminate/console": "^11.0",
-        "illuminate/filesystem": "^11.0",
+        "illuminate/support": "^11.0|^12.0",
+        "illuminate/console": "^11.0|^12.0",
+        "illuminate/filesystem": "^11.0|^12.0",
         "nikic/php-parser": "^4.15|^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0|^11.0",
-        "orchestra/testbench": "^9.0",
+        "orchestra/testbench": "^9.0|^10.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "mockery/mockery": "^1.6",
