--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,8 @@
     "require-dev": {
         "phpunit/phpunit": "^10.0|^11.0",
         "orchestra/testbench": "^9.0|^10.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
+        "pestphp/pest": "^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
         "mockery/mockery": "^1.6",
         "laravel/pint": "^1.0"
     },
