--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,14 +13,34 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [ 8.2, 8.3 ]
-        laravel: [ 11.*, 12.* ]
-        stability: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 11.*
+          # PHP 8.2 - Laravel 11 only (Laravel 12 requires PHP 8.3+)
+          - php: 8.2
+            laravel: 11.*
             testbench: 9.*
-          - laravel: 12.*
+            stability: prefer-lowest
+          - php: 8.2
+            laravel: 11.*
+            testbench: 9.*
+            stability: prefer-stable
+          
+          # PHP 8.3 - Both Laravel versions
+          - php: 8.3
+            laravel: 11.*
+            testbench: 9.*
+            stability: prefer-lowest
+          - php: 8.3
+            laravel: 11.*
+            testbench: 9.*
+            stability: prefer-stable
+          - php: 8.3
+            laravel: 12.*
             testbench: 10.*
+            stability: prefer-lowest
+          - php: 8.3
+            laravel: 12.*
+            testbench: 10.*
+            stability: prefer-stable
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }}
 
@@ -45,7 +65,7 @@ jobs:
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-        if: matrix.php == '8.2' && matrix.laravel == '12.*' && matrix.stability == 'prefer-stable'
+        if: matrix.php == '8.3' && matrix.laravel == '12.*' && matrix.stability == 'prefer-stable'
         with:
           file: ./coverage.xml
           fail_ci_if_error: false
